fix: png to webp & add ggg.md

--- a/src/components/RatingBox.astro
+++ b/src/components/RatingBox.astro
@@ -11,7 +11,7 @@ const { rating, author } = Astro.props
 ---
 
 <Box class="text-sm rating-box">
-  <img class="w-20" src='/img/stars.png' alt='hodnocení' />
+  <img class="w-20" src='/img/stars.webp' alt='hodnocení' />
   <Text class="text-left mb-0 italic">
     {rating}
   </Text>
