--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const steps = await getCollection('steps')
         </div>
         <div class='bg-[#F9EDE0] p-2 rounded-md w-full md:w-max m-auto'>
           <Box class='inline-block p-3'>
-            <img src='/img/header.png' alt='' class='w-full md:w-[280px] rounded-md' />
+            <img src='/img/header.webp' alt='' class='w-full md:w-[280px] rounded-md' />
           </Box>
         </div>
       </div>
@@ -56,7 +56,7 @@ const steps = await getCollection('steps')
             Chceme, aby nikdo nemusel procházet těžkým obdobím po ztrátě blízkého s pocitem, že je v tom sám. Sdílením našeho příběhu nabízíme oporu, naději a praktické rady všem, kdo čelí ztrátě, nemoci či životní změně.
           </Text>
         </div>
-        <img src='/img/about.png' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
+        <img src='/img/about.webp' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
       </div>
     </Content>
     <Content bg='light'>
@@ -73,7 +73,7 @@ const steps = await getCollection('steps')
             ironický nadhled.
           </Text>
         </div>
-        <img src='/img/book.png' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
+        <img src='/img/book.webp' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
       </div>
       <Box class='mt-8'>
         <H3>Kapitoly</H3>
@@ -164,7 +164,7 @@ const steps = await getCollection('steps')
         životními situacemi.
       </Text>
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4'>
-        <SupportBox headline="Metody sebereflexe a zvládání stresu" description="Sebereflexe a zvládání stresu jsou klíčové dovednosti pro každého, kdo prochází náročným obdobím. Umožňují nám zastavit se, podívat se na situaci s odstupem a zvolit cestu, která nás posune dál. Nejde o to být „pořád v pohodě', ale naučit se rozpoznat, co se v nás děje, a vědomě s tím pracovat." image="/img/support-1.png">
+        <SupportBox headline="Metody sebereflexe a zvládání stresu" description="Sebereflexe a zvládání stresu jsou klíčové dovednosti pro každého, kdo prochází náročným obdobím. Umožňují nám zastavit se, podívat se na situaci s odstupem a zvolit cestu, která nás posune dál. Nejde o to být „pořád v pohodě', ale naučit se rozpoznat, co se v nás děje, a vědomě s tím pracovat." image="/img/support-1.webp">
           <div class="flex flex-col gap-2">
             <Note>
               <strong>Co si odnést</strong>: Sebereflexe není o hledání
@@ -179,7 +179,7 @@ const steps = await getCollection('steps')
             </Note>
           </div>
         </SupportBox>
-        <SupportBox headline="Metody sebereflexe a zvládání stresu" description="Síla není o tom neplakat nebo „držet se' za každou cenu. Skutečná síla spočívá v tom, že umíš uznat své emoce a přesto najdeš způsob, jak pokračovat dál." image="/img/support-2.png">
+        <SupportBox headline="Metody sebereflexe a zvládání stresu" description="Síla není o tom neplakat nebo „držet se' za každou cenu. Skutečná síla spočívá v tom, že umíš uznat své emoce a přesto najdeš způsob, jak pokračovat dál." image="/img/support-2.webp">
           <div class="flex flex-col gap-2">
             <Note>
               <strong>Co si odnést</strong>: Zůstat silný neznamená
@@ -193,7 +193,7 @@ const steps = await getCollection('steps')
             </Note>
           </div>
         </SupportBox>
-        <SupportBox headline="Praktické kroky pro vyrovnání se s těžkými situacemi" description="Těžké životní chvíle mohou přijít nečekaně – nemoc, ztráta blízkého, rozpad vztahu, finanční krize. Není možné se na ně vždy připravit, ale lze se naučit, jak jimi projít bez úplného vyčerpání." image="/img/support-3.png">
+        <SupportBox headline="Praktické kroky pro vyrovnání se s těžkými situacemi" description="Těžké životní chvíle mohou přijít nečekaně – nemoc, ztráta blízkého, rozpad vztahu, finanční krize. Není možné se na ně vždy připravit, ale lze se naučit, jak jimi projít bez úplného vyčerpání." image="/img/support-3.webp">
           <div class="flex flex-col gap-2">
             <Note>
               <strong>Co si odnést</strong>: Vyrovnat se s těžkou situací
