feat: header changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,14 +28,15 @@ const steps = await getCollection('steps')
         <div>
           <H1>Úsměv pro Adama</H1>
           <H2 class='text-secondary text-left'>Příběh naděje, síly a pomoci</H2>
-          <Text class='text-left'>
+          <Text class='text-left mb-4'>
             Vítejte na stránkách knihy, která přináší příběh odhodlání, lásky a síly, kterou si člověk neuvědomuje,
             dokud nečelí nejtěžším životním výzvám.
           </Text>
-          <div class='flex gap-4 flex-col md:flex-row'>
+          <div class='flex gap-4 flex-col md:flex-row my-6'>
             <LinkButton href='/xxx' theme='primary' class='head-button'>Získat bezplatný výtisk</LinkButton>
             <LinkButton href='/asds' theme='outline'>Číst ukázku</LinkButton>
           </div>
+          <Text class="text-left">Přišel vám od nás výtisk do rukou? Budeme rádi, když nám pomůžete dostat téma k dalším lidem. Více informací naleznete <a href="asda" class="underline">zde</a>.</Text>
         </div>
         <div class='bg-[#F9EDE0] p-2 rounded-md w-full md:w-max m-auto'>
           <Box class='inline-block p-3'>
@@ -62,7 +63,7 @@ const steps = await getCollection('steps')
             našeho příběhu nabízíme oporu, naději a praktické rady všem, kdo čelí ztrátě, nemoci či životní změně.
           </Text>
         </div>
-        <img src='/img/about.webp' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
+        <img src='/img/autor.png' class='m-auto rounded-full w-full h-full md:w-[280px] md:h-[280px]' alt='' />
       </div>
     </Content>
     <Content bg='light'>
@@ -81,7 +82,7 @@ const steps = await getCollection('steps')
             ironický nadhled.
           </Text>
         </div>
-        <img src='/img/book.webp' class='m-auto rounded-full w-full h-full md:w-[240px] md:h-[240px]' alt='' />
+        <img src='/img/book.webp' class='m-auto rounded-full w-full h-full md:w-[280px] md:h-[280px]' alt='' />
       </div>
       <Box class='mt-8'>
         <H3>Kapitoly</H3>
